--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "^7.3.0",
+    "hexo-asset-image": "^1.0.0",
     "hexo-deployer-rsync": "^3.0.0",
     "hexo-deployer-sftp": "^0.4.1",
     "hexo-generator-archive": "^2.0.0",
