--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "7.3.0"
   },
   "dependencies": {
+    "gitalk": "^1.8.0",
     "hexo": "^7.3.0",
     "hexo-asset-image": "^1.0.0",
     "hexo-deployer-rsync": "^3.0.0",
@@ -19,11 +20,14 @@
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^4.0.0",
+    "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-migrator-rss": "^1.1.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.3.0",
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
+    "hexo-theme-icarus": "^6.1.0",
     "hexo-theme-landscape": "^1.0.0",
     "hexo-theme-next": "^8.21.0"
   }
